# python-cmake

./: .gitignore  .ignore  CMakeLists.txt  README.md
cmake/: ConfigureChecks.cmake  Extensions.cmake  FindUUID.cmake  PlatformTest.cmake  PythonApplyPatches.cmake  PythonAutoDetectOSX.cmake  PythonConfig.cmake.in  PythonExtractVersionInfo.cmake  config.c.in  config_minimal.c.in  makefile-variables.in
cmake/config-unix/: pyconfig.h.in
cmake/config-win32/: pyconfig.h.in
cmake/extensions/: CMakeLists.txt
cmake/include/: CMakeLists.txt
cmake/lib/: CMakeLists.txt
cmake/libpython/: CMakeLists.txt  generate_libpythonstub_def.cmake
cmake/python/: CMakeLists.txt
cmake/tools/: CMakeLists.txt
patches/: README.md
patches/3.10/: 0001-Prevent-incorrect-include-of-io.h-found-in-libmpdec.patch  0002-Undefine-_DEBUG-to-enable-extension-site-packages-loading-in-debug-build[LOAD_NORMAL_EXTENSIONS_IN_DEBUG].patch  README.md
patches/3.11/: 0001-Prevent-incorrect-include-of-io.h-found-in-libmpdec.patch  0002-Undefine-_DEBUG-to-enable-extension-site-packages-loading-in-debug-build[LOAD_NORMAL_EXTENSIONS_IN_DEBUG].patch  README.md
patches/3.12/: 0001-Prevent-incorrect-include-of-io.h-found-in-libmpdec.patch  0002-Undefine-_DEBUG-to-enable-extension-site-packages-loading-in-debug-build[LOAD_NORMAL_EXTENSIONS_IN_DEBUG].patch  0003-Enable-extension-loading-on-win32-with-libpython-static[WIN32_EMBEDED_APPLICATION_NAME].patch  README.md
patches/3.13/: 0001-Prevent-incorrect-include-of-io.h-found-in-libmpdec.patch  0002-Undefine-_DEBUG-to-enable-extension-site-packages-loading-in-debug-build[LOAD_NORMAL_EXTENSIONS_IN_DEBUG].patch  0003-Enable-extension-loading-on-win32-with-libpython-static[WIN32_EMBEDED_APPLICATION_NAME].patch
patches/3.8/: 0001-Prevent-incorrect-include-of-io.h-found-in-libmpdec.patch  0002-Undefine-_DEBUG-to-enable-extension-site-packages-loading-in-debug-build[LOAD_NORMAL_EXTENSIONS_IN_DEBUG].patch  0003-Prevent-duplicated-OverlappedType-symbols[BUILD_EXTENSIONS_AS_BUILTIN].patch  README.md
patches/3.9/: 0001-Prevent-incorrect-include-of-io.h-found-in-libmpdec.patch  0002-Undefine-_DEBUG-to-enable-extension-site-packages-loading-in-debug-build[LOAD_NORMAL_EXTENSIONS_IN_DEBUG].patch  0003-Prevent-duplicated-OverlappedType-symbols[BUILD_EXTENSIONS_AS_BUILTIN].patch
